--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fetch Practice</title>
-    <script src="main.js"></script>
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    
 </head>
 <body>
-    
+    <div class="container text-center w-25 mt-4">
+        <form action="#">
+            <input type="text" name="" id="" class="form-control" placeholder="Pokemon...">
+            <button type="submit" class="mt-2 btn btn-primar">Buscar</button>
+
+        </form>
+        <div class="pokemon-container mt-4">
+
+        </div>
+    </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
