fix the fill button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container text-center w-25 mt-4">
         <form action="#">
             <input type="text" name="" id="" class="form-control" placeholder="Pokemon...">
-            <button type="submit" class="mt-2 btn btn-primar">Buscar</button>
+            <button type="submit" class="mt-2 btn btn-primary">Buscar</button>
 
         </form>
         <div class="pokemon-container mt-4">
