--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         
     <!-- SweetAlert -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+    <!-- CUSTOM CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container text-center w-25 mt-4">
