--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container text-center w-25 mt-4">
+    <div class="container text-center mt-4">
         <form action="#">
             <input type="text" name="" id="" class="form-control" placeholder="Pokemon...">
             <button type="submit" class="mt-2 btn btn-primary">Buscar</button>
 
         </form>
-        <div class="pokemon-container mt-4">
+        <div class="pokemon-container container d-flex mt-4">
 
         </div>
     </div>
