fix some styles

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
     <div class="container text-center mt-4">
         <form action="#">
-            <input type="text" name="" id="" class="form-control" placeholder="Pokemon...">
-            <button type="submit" class="mt-2 btn btn-primary">Buscar</button>
+            <input type="text" name="" id="" class="form-control PokemonFinder" placeholder="Escribe un pokémon o un ID...">
+            <button type="submit" class="mt-2 w-50 btn btn-primary">Buscar</button>
 
         </form>
         <div class="pokemon-container container d-flex mt-4">
