Add some styles at the homepage

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container text-center mt-4">
         <form action="#">
             <input type="text" name="" id="" class="form-control PokemonFinder" placeholder="Escribe un pokémon o un ID...">
-            <button type="submit" class="mt-2 w-50 btn btn-primary">Buscar</button>
+            <button type="submit" class="mt-2 w-50 btn btn-primary btn-buscar">Buscar</button>
 
         </form>
         <div class="pokemon-container container d-flex mt-4">
@@ -37,7 +37,8 @@
   <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
-        
+        <img id="img-locations" src="" alt="">
+        <h2>Locations</h2>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body" id="modal-body">
@@ -53,7 +54,8 @@
   <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
-        
+        <img id="img-moves" src="" alt="">
+        <h2>Moves</h2>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body" id="modal-moves-body">
