--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="main">
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About the proyect</a></li>
+        <li><a href="#">About Arturo Ortueta</a></li>
+      </ul>
+    </nav>
+    <div class="pokeball">
+      <img src="resources/img/pokeball.svg" alt="">
+    </div>
+      <img src="resources/img/arrow-down-sign-to-navigate.svg" class="arrow-down1" alt="">
+      <img src="resources/img/arrow-down-sign-to-navigate.svg" class="arrow-down2" alt="">
+  </div>
     <div class="container text-center mt-4">
         <form action="#">
             <input type="text" name="" id="" class="form-control PokemonFinder" placeholder="Escribe un pokémon o un ID...">
