disappear pokeball and arrow

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="main">
+  <div class="main" id="main">
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
@@ -27,11 +27,11 @@
         <li><a href="#">About Arturo Ortueta</a></li>
       </ul>
     </nav>
-    <div class="pokeball">
+    <div class="pokeball" id="pokeball">
       <img src="resources/img/pokeball.svg" alt="">
     </div>
-      <img src="resources/img/arrow-down-sign-to-navigate.svg" class="arrow-down1" alt="">
-      <img src="resources/img/arrow-down-sign-to-navigate.svg" class="arrow-down2" alt="">
+      <img src="resources/img/arrow-down-sign-to-navigate.svg" class="arrow-down1" id="arrow" alt="">
+      <img src="resources/img/arrow-down-sign-to-navigate.svg" class="arrow-down2" id="arrow" alt="">
   </div>
     <div class="container text-center mt-4">
         <form action="#">
