proyect to poject

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">About the proyect</a></li>
+        <li><a href="#">About the project</a></li>
         <li><a href="#">About Arturo Ortueta</a></li>
       </ul>
     </nav>
