Add clear animation

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <img src="resources/img/pokeball.svg" alt="">
     </div>
       <img src="resources/img/arrow-down-sign-to-navigate.svg" class="arrow-down1" id="arrow" alt="">
-      <img src="resources/img/arrow-down-sign-to-navigate.svg" class="arrow-down2" id="arrow" alt="">
+      <img src="resources/img/arrow-down-sign-to-navigate.svg" class="arrow-down2" id="arrow2" alt="">
   </div>
     <div class="container text-center mt-4">
         <form action="#">
