Add scroll down text

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <div class="pokeball" id="pokeball">
       <img src="resources/img/pokeball.svg" alt="">
     </div>
+    <label for="" class="scrolldown" id="scrolldown">Scroll Down</label>
       <img src="resources/img/arrow-down-sign-to-navigate.svg" class="arrow-down1" id="arrow" alt="">
       <img src="resources/img/arrow-down-sign-to-navigate.svg" class="arrow-down2" id="arrow2" alt="">
   </div>
