--- a/index.html
+++ b/index.html
@@ -20,49 +20,27 @@
 </head>
 <body>
   <div class="main" id="main">
-    <nav class="navbar navbar-light bg-light fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">PokeDex By Arturo</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-          <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">PokeDex By Arturo</h5>
-            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-          </div>
-          <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About the project</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About ME</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About the project</a></li>
+        <li><a href="#">About Arturo Ortueta</a></li>
+      </ul>
     </nav>
-
-
     <div class="pokeball" id="pokeball">
       <img src="resources/img/pokeball.svg" alt="">
     </div>
     <div class="texto">
 <label for="" class="scrolldown" id="scrolldown">Scroll Down</label>
 <img src="resources/img/arrow-down-sign-to-navigate.svg" class="arrow-down1" id="arrow" alt="">
-      <img src="resources/img/arrow-down-sign-to-navigate.svg" class="arrow-down2" id="arrow2" alt="">  
-</div>
+      <img src="resources/img/arrow-down-sign-to-navigate.svg" class="arrow-down2" id="arrow2" alt="">
+    </div>
     
       
   </div>
     <div class="container text-center mt-4">
         <form action="#">
-            <input type="text" name="" id="btn-busqueda" class="form-control PokemonFinder" placeholder="Escribe un pokémon o un ID...">
+            <input type="text" name="" id="" class="form-control PokemonFinder" placeholder="Escribe un pokémon o un ID...">
             <button type="submit" class="mt-2 w-50 btn btn-primary btn-buscar">Buscar</button>
 
         </form>
